--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,8 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         {% if site.github.is_project_page %}
-        <p class="view"><a href="https://steamcommunity.com/groups/tiargamerclub">Steam grubu <small>{{ site.github.repository_nwo }}</small></a></p>
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
+        <p class="view"><a href="https://steamcommunity.com/groups/tiargamerclub">Steam grubu <small>Linke tıklayın</small></a></p>
+        <p class="view"><a href="{{ site.github.repository_url }}">Discord <small>Aşağı tarafta</small></a></p>
         {% endif %}
 
         {% if site.github.is_user_page %}
