--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 
         {% if site.github.is_project_page %}
         <p class="view"><a href="https://steamcommunity.com/groups/tiargamerclub">Steam grubu <small>Linke tıklayın</small></a></p>
-        <p class="view"><a href="{{ site.github.repository_url }}">Discord <small>Aşağı tarafta</small></a></p>
+        <p class="view"><a href="{{ site.github.repository_url }}">Discord <small>Aşağı taraftan bağlanın</small></a></p>
         {% endif %}
 
         {% if site.github.is_user_page %}
@@ -46,7 +46,7 @@
       </section>
       <footer>
         {% if site.github.is_project_page %}
-        <iframe src="https://discordapp.com/widget?id=449928432877568010&theme=dark" width="280" height="600" allowtransparency="true" frameborder="0"></iframe>
+        <iframe src="https://discordapp.com/widget?id=449928432877568010&theme=dark" width="280" height="500" allowtransparency="true" frameborder="0"></iframe>
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
