--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 
         {% if site.github.is_project_page %}
         <p class="view"><a href="https://steamcommunity.com/groups/tiargamerclub">Steam grubu <small>Linke tıklayın</small></a></p>
-        <p class="view"><a href="{{ site.github.repository_url }}">Discord <small>Aşağı taraftan bağlanın</small></a></p>
+        <p class="view"><a href="">Discord <small>Aşağı taraftan bağlanın</small></a></p>
         {% endif %}
 
         {% if site.github.is_user_page %}
